Closed
Bug 1657329
Opened 5 years ago
Closed 5 years ago
Linker issues in JS Debugger when running non-unified build locally
Categories
(Core :: JavaScript Engine, defect, P1)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
81 Branch
Tracking | Status | |
---|---|---|
firefox81 | --- | fixed |
People
(Reporter: tcampbell, Assigned: tcampbell)
Details
Attachments
(1 file)
When building locally with FILES_PER_UNIFIED_FILE = 1 (in order to reproduce nu
job failures), I get a link error due to missing -inl.h
includes in debugger.
ld.lld: error: undefined hidden symbol: js::DebuggerEnvironment::owner() const
>>> referenced by Debugger.cpp:3671 (/home/tcampbell/projects/gecko.dev/js/src/debugger/Debugger.cpp:3671)
>>> ../debugger/Debugger.o:(js::DebugAPI::edgeIsInDebuggerWeakmap(JSRuntime*, JSObject*, JS::GCCellPtr))
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by tcampbell@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f3a3edb8834e
Add missing inl includes in Debugger.cpp. r=loganfsmyth
Comment 3•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•