Bug 1657329 - Add missing inl includes in Debugger.cpp. r=loganfsmyth

Differential Revision: https://phabricator.services.mozilla.com/D86001